// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`align 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-align23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="align23456"
    />
  </div>
</div>
`;

exports[`center content 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-center content23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="center content23456"
    >
      <div
        class="lf-row"
        id="center content-content23456"
        style="justify-content: center; flex-wrap: wrap;"
      >
        <div
          class=""
          id="bl-One23456"
          style="flex: 0 1 800px; background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`grow 0 0 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-grow 0 023456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="grow 0 023456"
    >
      <div
        class="lf-row"
        id="grow 0 0-content23456"
        style="flex-wrap: wrap;"
      >
        <div
          class=""
          id="bl-One23456"
          style="flex: 0 1 auto; background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            grow: 0 - ONE Lorem ipsum dolor

          </div>
        </div>
        <div
          class=""
          id="bl-Two23456"
          style="flex: 0 1 auto; background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            grow: 0 - TWO Lorem ipsum dolor

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`grow 0 1 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-grow 0 123456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="grow 0 123456"
    >
      <div
        class="lf-row"
        id="grow 0 1-content23456"
        style="flex-wrap: wrap;"
      >
        <div
          class=""
          id="bl-One23456"
          style="flex: 0 1 auto; background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            grow: 0 - ONE Lorem ipsum dolor

          </div>
        </div>
        <div
          class=""
          id="bl-Two23456"
          style="flex: 1 1 auto; background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            grow: 1 - TWO Lorem ipsum dolor

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`grow 1 0 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-grow 1 023456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="grow 1 023456"
    >
      <div
        class="lf-row"
        id="grow 1 0-content23456"
        style="flex-wrap: wrap;"
      >
        <div
          class=""
          id="bl-One23456"
          style="flex: 1 1 auto; background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            grow: 1 - ONE Lorem ipsum dolor

          </div>
        </div>
        <div
          class=""
          id="bl-Two23456"
          style="flex: 0 1 auto; background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            grow: 0 - TWO Lorem ipsum dolor

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`grow 1 1 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-grow 1 123456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="grow 1 123456"
    >
      <div
        class="lf-row"
        id="grow 1 1-content23456"
        style="flex-wrap: wrap;"
      >
        <div
          class=""
          id="bl-One23456"
          style="flex: 1 1 auto; background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            grow: 1 - ONE Lorem ipsum dolor

          </div>
        </div>
        <div
          class=""
          id="bl-Two23456"
          style="flex: 1 1 auto; background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            grow: 1 - TWO Lorem ipsum dolor

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`offset 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-offset23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="offset23456"
    >
      <div
        class="lf-row"
        id="offset-content23456"
        style="flex-wrap: wrap;"
      >
        <div
          class="lf-col"
          id="bl-One23456"
          style="--lf-span: 24; --lf-span-md: 20; --lf-offset-md: 4; background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,

          </div>
        </div>
        <div
          class="lf-col"
          id="bl-Two23456"
          style="--lf-span: 24; --lf-span-md: 10; --lf-offset-md: 4; background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`offset push pull span 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-offset push pull span23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="offset push pull span23456"
    >
      <div
        class="lf-row"
        id="offset push pull span-content23456"
        style="flex-wrap: wrap;"
      >
        <div
          class="lf-col"
          id="bl-One23456"
          style="--lf-span: 24; --lf-span-md: 6; --lf-offset-md: 2; background: rgb(64, 170, 85);"
        >
          <div
            id="One23456"
          >
            ONE Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod

          </div>
        </div>
        <div
          class="lf-col lf-col-push"
          id="bl-One23456"
          style="--lf-span: 24; --lf-span-md: 6; --lf-push-md: 1; background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            ONE Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod

          </div>
        </div>
        <div
          class="lf-col lf-col-pull"
          id="bl-Two23456"
          style="--lf-span: 24; --lf-span-md: 6; --lf-pull-md: 1; background: rgb(255, 79, 175); opacity: 0.5;"
        >
          <div
            id="Two23456"
          >
            TWO Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`order 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-order23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="order23456"
    >
      <div
        class="lf-row"
        id="order-content23456"
        style="flex-wrap: wrap;"
      >
        <div
          class="lf-col"
          id="bl-One23456"
          style="--lf-span: 24; --lf-span-md: 24; --lf-order-md: 1; background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            ONE Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,

          </div>
        </div>
        <div
          class="lf-col"
          id="bl-Two23456"
          style="--lf-span: 24; --lf-span-md: 24; --lf-order-md: 0; background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            TWO Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pull 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-pull23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="pull23456"
    >
      <div
        class="lf-row"
        id="pull-content23456"
        style="flex-wrap: wrap;"
      >
        <div
          class="lf-col"
          id="bl-One23456"
          style="--lf-span: 24; --lf-span-md: 10; background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            ONE Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,

          </div>
        </div>
        <div
          class="lf-col lf-col-pull"
          id="bl-Two23456"
          style="--lf-span: 24; --lf-span-md: 10; --lf-pull-md: 1; background: rgb(255, 79, 175); opacity: 0.5;"
        >
          <div
            id="Two23456"
          >
            TWO Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`push 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-push23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="push23456"
    >
      <div
        class="lf-row"
        id="push-content23456"
        style="flex-wrap: wrap;"
      >
        <div
          class="lf-col lf-col-push"
          id="bl-One23456"
          style="--lf-span: 24; --lf-span-md: 10; --lf-push-md: 1; background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            ONE Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,

          </div>
        </div>
        <div
          class="lf-col"
          id="bl-Two23456"
          style="--lf-span: 24; --lf-span-md: 10; background: rgb(255, 79, 175); opacity: 0.5;"
        >
          <div
            id="Two23456"
          >
            TWO Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`shrink 1 1 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-shrink 1 123456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="shrink 1 123456"
    >
      <div
        class="lf-row"
        id="shrink 1 1-content23456"
        style="flex-wrap: wrap;"
      >
        <div
          class=""
          id="bl-One23456"
          style="flex: 0 1 auto; background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            shrink: 1 - ONE Lorem ipsum dolor

          </div>
        </div>
        <div
          class=""
          id="bl-Two23456"
          style="flex: 0 1 auto; background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            shrink: 1 - TWO Lorem ipsum dolor

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`size 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-size23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="size23456"
    >
      <div
        class="lf-row"
        id="size-content23456"
        style="flex-wrap: wrap;"
      >
        <div
          class=""
          id="bl-One23456"
          style="flex: 0 1 200px; background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            size: 200 - ONE Lorem ipsum dolor

          </div>
        </div>
        <div
          class=""
          id="bl-Two23456"
          style="flex: 0 1 400px; background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            size: 400 - TWO Lorem ipsum dolor

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`span 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-span23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="span23456"
    >
      <div
        class="lf-row"
        id="span-content23456"
        style="flex-wrap: wrap;"
      >
        <div
          class="lf-col"
          id="bl-One23456"
          style="--lf-span: 24; --lf-span-md: 4; background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="lf-col"
          id="bl-Two23456"
          style="--lf-span: 24; --lf-span-md: 8; background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="lf-col"
          id="bl-Three23456"
          style="--lf-span: 24; --lf-span-md: 15;"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
